--- a/resources/specialized-reports/08-13-37/Analytical_Intelligence_Brief_2025-04-20.html
+++ b/resources/specialized-reports/08-13-37/Analytical_Intelligence_Brief_2025-04-20.html
@@ -7,8 +7,8 @@
   <title>Analytical Intelligence Brief: 2025-04-20</title>
   <style>
     body {
-      font-family: 'Inter', 'Arial', sans-serif;
-      /* Clean, business-like font */
+      font-family: 'Crimson Text', Georgia, serif;
+      /* More formal, authoritative font */
       background: #f9f9f9;
       line-height: 1.6;
       color: #333;
@@ -30,15 +30,15 @@
     h1 {
       font-size: 2em;
       padding-bottom: 0.5em;
-      border-bottom: 2px solid #0E76A8;
-      /* Gamma's color */
+      border-bottom: 2px solid #3A5998;
+      /* Alpha's color */
       text-align: center;
     }
 
     .category-label {
       display: inline-block;
-      background: #0E76A8;
-      /* Gamma's color */
+      background: #3A5998;
+      /* Alpha's color */
       color: white;
       padding: 6px 14px;
       border-radius: 4px;
@@ -52,8 +52,8 @@
       align-items: center;
       margin-bottom: 2em;
       padding: 0.5em 1em;
-      border-left: 4px solid #0E76A8;
-      background-color: #f0f7fb;
+      border-left: 4px solid #3A5998;
+      background-color: #f5f8ff;
     }
 
     .agent-avatar {
@@ -79,9 +79,9 @@
     }
 
     .summary-section {
-      background-color: #f3f8fb;
-      /* Light blue-gray for Gamma */
-      border-left: 4px solid #0E76A8;
+      background-color: #f0f4fb;
+      /* Slightly bluer shade for Alpha */
+      border-left: 4px solid #3A5998;
       padding: 1.5em;
       margin: 2em 0;
     }
@@ -94,156 +94,59 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
 
-    /* Gamma-specific sections */
-    .market-indicators {
+    /* Alpha-specific sections */
+    .historical-context {
+      background-color: #f8f9fa;
+      border-left: 3px solid #3A5998;
+      padding: 1.2em;
+      margin: 1.5em 0;
+    }
+
+    .power-dynamics-table {
       width: 100%;
       border-collapse: collapse;
       margin: 1.5em 0;
     }
 
-    .market-indicators th {
-      background-color: #0E76A8;
+    .power-dynamics-table th {
+      background-color: #3A5998;
       color: white;
-      padding: 10px;
       text-align: left;
+      padding: 10px;
     }
 
-    .market-indicators td {
-      padding: 8px 12px;
+    .power-dynamics-table td {
+      padding: 8px 10px;
       border-bottom: 1px solid #eee;
     }
 
-    .market-indicators .indicator-up {
-      color: #27ae60;
-    }
-
-    .market-indicators .indicator-down {
-      color: #e74c3c;
-    }
-
-    .indicator-neutral {
-      color: #95a5a6;
-    }
-
-    .trend-arrow::after {
-      display: inline-block;
-      margin-left: 5px;
-    }
-
-    .trend-up::after {
-      content: "▲";
-      color: #27ae60;
-    }
-
-    .trend-down::after {
-      content: "▼";
-      color: #e74c3c;
-    }
-
-    .trend-neutral::after {
-      content: "►";
-      color: #95a5a6;
-    }
-
-    .data-visualization {
-      width: 100%;
-      height: 300px;
-      background-color: #f8f9fa;
-      border: 1px solid #e9ecef;
-      border-radius: 4px;
-      margin: 1.5em 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #6c757d;
-    }
-
-    .scenario-container {
-      margin: 2em 0;
-    }
-
-    .scenario {
-      border-left: 3px solid #0E76A8;
-      padding: 1em 1.5em;
-      margin-bottom: 1.5em;
-      background-color: #f8f9fa;
-    }
-
-    .scenario-high {
-      border-left-color: #27ae60;
-    }
-
-    .scenario-medium {
-      border-left-color: #f39c12;
-    }
-
-    .scenario-low {
-      border-left-color: #e74c3c;
-    }
-
-    .scenario-title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 0.8em;
-    }
-
-    .scenario-probability {
-      display: inline-block;
-      padding: 4px 8px;
-      border-radius: 4px;
-      font-size: 0.8em;
-      font-weight: bold;
-    }
-
-    .probability-high {
-      background-color: rgba(39, 174, 96, 0.2);
-      color: #27ae60;
-    }
-
-    .probability-medium {
-      background-color: rgba(243, 156, 18, 0.2);
-      color: #f39c12;
-    }
-
-    .probability-low {
-      background-color: rgba(231, 76, 60, 0.2);
-      color: #e74c3c;
-    }
-
-    .resource-allocation {
-      border-top: 1px solid #eee;
-      margin-top: 2em;
-      padding-top: 1em;
-    }
-
-    .comparative-analysis {
-      display: flex;
-      gap: 20px;
+    .policy-implications {
+      border-left: 3px solid #2c3e50;
+      padding-left: 1.2em;
       margin: 1.5em 0;
     }
 
-    .comparative-column {
-      flex: 1;
-      background-color: #f8f9fa;
-      border-top: 3px solid #0E76A8;
-      padding: 1em;
-      border-radius: 4px;
+    .key-quote {
+      font-style: italic;
+      border-left: 2px solid #3A5998;
+      padding-left: 1em;
+      color: #444;
+      margin: 1.5em 0;
     }
 
     a {
-      color: #0E76A8;
+      color: #3A5998;
       text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
-      color: #0a5176;
+      color: #2c4a80;
     }
 
     /* Responsive design */
     @media (max-width: 768px) {
-      .comparative-analysis {
+      .comparison-container {
         flex-direction: column;
       }
     }
@@ -259,79 +162,53 @@
 
   <!-- Agent Attribution -->
   <div class="agent-attribution">
-    <img src="assets/images/gamma_icon.webp" alt="Agent Gamma" class="agent-avatar">
+    <img src="assets/images/alpha_icon.webp" alt="Agent Alpha" class="agent-avatar">
     <div class="agent-info">
-      <span class="agent-name">Agent Gamma</span>
-      <span class="agent-title">Economic & Market Analyst</span>
+      <span class="agent-name">Agent Alpha</span>
+      <span class="agent-title">Geopolitical Strategist</span>
     </div>
   </div>
 
   <!-- Summary Section (for all report types) -->
   <section class="summary-section">
     <h2>Summary</h2>
-    <p>This brief assesses key economic and geopolitical trends observed on 2025-04-20. The analysis highlights increasing trade tensions, particularly between the US and China, coupled with rising inflation and stagflation concerns. Geopolitical instability is evident in the ongoing conflicts in Ukraine and Gaza, alongside shifting alliances and humanitarian crises. Technological advancements, especially in AI and quantum computing, present both opportunities and risks. The convergence of these factors creates a complex and volatile global landscape demanding careful monitoring and strategic adaptation.</p>
+    <p>This brief analyzes key geopolitical and technological developments as of April 20, 2025. Key themes include escalating US-China trade tensions and their global economic impact, the ongoing conflict in Gaza and its humanitarian consequences, advancements in quantum computing and drone warfare, and shifts in US foreign policy regarding Iran, Ukraine, and Syria. The report also examines the rise of authoritarianism in various regions and the increasing use of AI and surveillance technologies.</p>
   </section>
 
   <!-- Main Content Section - Flexible based on report type -->
   <section class="content-section">
-    <!-- For deep-dive reports -->
     <div class="deep-dive">
       <h2>Key Analysis</h2>
 
-      <h3>Trade Tensions and Stagflation Risks</h3>
-      <p>The escalating trade war, primarily between the US and China, continues to disrupt global markets. Imposition of tariffs is forcing companies to reassess supply chains, leading to production inconsistencies and potential price increases for consumers. Compounding this issue, rising inflation and the specter of stagflation pose a significant threat to economic stability. Corporate profiteering, potentially exacerbated by tariffs, is squeezing consumer spending and increasing recession fears. Central banks face the difficult task of managing monetary policy to mitigate these risks.</p>
+      <h3>Geopolitical Flashpoints and Power Dynamics</h3>
+      <p>The international landscape remains characterized by intensifying competition among major powers. The US-China trade war, exacerbated by tariff policies and strategic competition in the AI market (where US chipmakers fear losing ground to Huawei), continues to generate economic uncertainty. Trump's "fair deals" approach to trade, exemplified by negotiations with Italy, signals a potential shift away from multilateral frameworks and towards bilateral agreements, potentially disrupting transatlantic trade dynamics.</p>
 
-      <h3>Geopolitical Instability and Shifting Alliances</h3>
-      <p>Geopolitical tensions remain elevated, with ongoing conflicts in Ukraine and Gaza creating humanitarian crises and regional instability. The potential for a US withdrawal from Ukraine-Russia peace talks introduces uncertainty and could embolden further territorial aggression. Simultaneously, the dire humanitarian situation in Gaza, marked by restricted aid access and ongoing conflict, raises concerns about potential war crimes. Shifting alliances are also apparent, with Saudi Arabia and Iran exploring expanded military ties, signaling a realignment of power dynamics in the Middle East.</p>
+      <p>In Eastern Europe, the Russia-Ukraine conflict persists, with reports of potential US recognition of Crimea as Russian territory raising concerns about Western resolve and the potential for emboldened aggression. The humanitarian crisis in Gaza, compounded by restricted aid access, presents a significant challenge, potentially radicalizing the population and destabilizing the region. Simultaneously, the US is mulling sanctions relief for Syria, signaling a potential re-evaluation of its strategic interests in the region.</p>
 
-      <h3>Technological Advancements and Security Implications</h3>
-      <p>Rapid advancements in quantum computing and AI present both opportunities and risks. The quantum era's arrival has major implications for cybersecurity, with the potential to break existing encryption methods. The proliferation of drone technology necessitates enhanced defense strategies, while increased reliance on AI and surveillance technologies raises ethical and legal concerns related to privacy and data accuracy. The US faces increasing competition from China in the AI market, driven in part by trade restrictions, potentially leading to shifts in technological leadership.</p>
+      <p>China's expanding influence in Southeast Asia, particularly in Cambodia through infrastructure projects and naval base renovations, raises concerns about regional power dynamics and potential military expansion. This necessitates close monitoring of geopolitical competition in the region.</p>
 
-      <table class="market-indicators">
-        <thead>
-          <tr>
-            <th>Indicator</th>
-            <th>Status</th>
-            <th>Trend</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Global Trade Volume</td>
-            <td><span class="indicator-down">Decreasing</span></td>
-            <td><span class="trend-down"></span></td>
-          </tr>
-          <tr>
-            <td>Inflation Rate (Global Average)</td>
-            <td><span class="indicator-up">Increasing</span></td>
-            <td><span class="trend-up"></span></td>
-          </tr>
-          <tr>
-            <td>Geopolitical Risk Index</td>
-            <td><span class="indicator-up">Elevated</span></td>
-            <td><span class="trend-neutral"></span></td>
-          </tr>
-          <tr>
-            <td>AI Investment</td>
-            <td><span class="indicator-up">Increasing</span></td>
-            <td><span class="trend-up"></span></td>
-          </tr>
-          <tr>
-            <td>Quantum Computing Development</td>
-            <td><span class="indicator-up">Advancing</span></td>
-            <td><span class="trend-up"></span></td>
-          </tr>
-        </tbody>
-      </table>
+      <h3>Technological Disruption and Security Implications</h3>
+      <p>The rapid advancement of quantum computing presents both opportunities and threats. Breakthroughs in quantum encryption and code breaking could have profound implications for national security and data privacy. The proliferation of drone technology in warfare necessitates enhanced defense strategies and raises ethical concerns about accountability.</p>
+
+      <p>The increasing reliance on satellites for communication, navigation, and surveillance makes them potential targets in conflicts. The development of hypersonic weapons by nations like China and Russia could trigger a new arms race, increasing global instability.</p>
+
+      <h3>Erosion of Democratic Norms and Humanitarian Concerns</h3>
+      <p>Several reports indicate a concerning trend of democratic backsliding and political instability across various regions, including Tunisia and Bangladesh. The jailing of opposition leaders and reports of secret prisons highlight potential risks to human rights and regional security.</p>
+
+      <p>The humanitarian crisis in Gaza is intensifying, with restricted aid access and ongoing conflict exacerbating the situation. The Trump administration's immigration policies and proposed budget cuts for federal health agencies continue to spark controversy.</p>
+
+      <div class="historical-context">
+        <h4>Historical Context</h4>
+        <p>The current geopolitical landscape reflects a resurgence of great power competition reminiscent of the Cold War era. The US-China trade war echoes historical protectionist policies and trade imbalances. The conflict in Ukraine draws parallels to past territorial disputes and power struggles in Eastern Europe. The Israeli-Palestinian conflict remains a persistent source of regional instability, rooted in historical grievances and unresolved territorial claims.</p>
+      </div>
     </div>
   </section>
 
   <!-- Implications Section (optional) -->
   <section class="content-section">
     <h2>Implications & Significance</h2>
-    <p>The convergence of trade tensions, geopolitical instability, and rapid technological advancements presents significant challenges to global economic stability and security. Businesses must adapt to evolving supply chains and potential tariff impacts. Governments must carefully manage monetary policy to address inflation and recession risks, while also navigating complex geopolitical landscapes and shifting alliances. Furthermore, ethical considerations surrounding AI and the need for robust cybersecurity measures are paramount. Strategic partnerships and international cooperation will be crucial for mitigating these risks and fostering a more stable and secure global environment.</p>
+    <p>The convergence of these geopolitical and technological trends presents significant challenges to global stability and international security. The erosion of democratic norms, the intensification of great power competition, and the rapid development of disruptive technologies necessitate proactive diplomacy, strategic alliances, and robust regulatory frameworks to mitigate potential risks and promote a more peaceful and prosperous world order. Failure to address these challenges could lead to increased conflict, economic instability, and a decline in global human rights.</p>
   </section>
-
 
 </body>
 
