--- a/resources/specialized-reports/08-13-37/Comparative_Regional_Analysis_2025-04-20.html
+++ b/resources/specialized-reports/08-13-37/Comparative_Regional_Analysis_2025-04-20.html
@@ -7,8 +7,8 @@
   <title>Comparative Regional Analysis: 2025-04-20</title>
   <style>
     body {
-      font-family: 'Open Sans', 'Segoe UI', sans-serif;
-      /* Warm, approachable font */
+      font-family: 'Crimson Text', Georgia, serif;
+      /* More formal, authoritative font */
       background: #f9f9f9;
       line-height: 1.6;
       color: #333;
@@ -30,15 +30,15 @@
     h1 {
       font-size: 2em;
       padding-bottom: 0.5em;
-      border-bottom: 2px solid #DD4B39;
-      /* Delta's color */
+      border-bottom: 2px solid #3A5998;
+      /* Alpha's color */
       text-align: center;
     }
 
     .category-label {
       display: inline-block;
-      background: #DD4B39;
-      /* Delta's color */
+      background: #3A5998;
+      /* Alpha's color */
       color: white;
       padding: 6px 14px;
       border-radius: 4px;
@@ -52,8 +52,8 @@
       align-items: center;
       margin-bottom: 2em;
       padding: 0.5em 1em;
-      border-left: 4px solid #DD4B39;
-      background-color: #FFF5F3;
+      border-left: 4px solid #3A5998;
+      background-color: #f5f8ff;
     }
 
     .agent-avatar {
@@ -79,9 +79,9 @@
     }
 
     .summary-section {
-      background-color: #FFF5F3;
-      /* Soft red for Delta */
-      border-left: 4px solid #DD4B39;
+      background-color: #f0f4fb;
+      /* Slightly bluer shade for Alpha */
+      border-left: 4px solid #3A5998;
       padding: 1.5em;
       margin: 2em 0;
     }
@@ -94,176 +94,79 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
 
-    /* Delta-specific sections */
-    .human-story {
-      background-color: #FFF9F5;
-      border-left: 3px solid #DD4B39;
-      padding: 1.2em;
-      margin: 1.5em 0;
-      font-style: italic;
-    }
-
-    .human-story-source {
-      display: block;
-      text-align: right;
-      font-style: normal;
-      font-size: 0.9em;
-      color: #666;
-      margin-top: 0.5em;
-    }
-
-    /* Timeline for chronological reports */
-    .timeline {
-      position: relative;
-      max-width: 1200px;
-      margin: 2em 0;
-      padding-left: 2em;
-    }
-
-    .timeline::before {
-      content: '';
-      position: absolute;
-      width: 4px;
-      background-color: #DD4B39;
-      top: 0;
-      bottom: 0;
-      left: 0;
-    }
-
-    .timeline-item {
-      position: relative;
-      margin-bottom: 2em;
-      padding-left: 2em;
-    }
-
-    .timeline-item::before {
-      content: '';
-      position: absolute;
-      width: 16px;
-      height: 16px;
-      left: -9px;
-      background-color: white;
-      border: 4px solid #DD4B39;
-      top: 0;
-      border-radius: 50%;
-      z-index: 1;
-    }
-
-    .timeline-date {
-      position: absolute;
-      left: 2em;
-      top: -5px;
-      background-color: #DD4B39;
-      color: white;
-      padding: 3px 10px;
-      border-radius: 3px;
-      font-size: 0.8em;
-    }
-
-    .timeline-content {
-      padding-top: 1.5em;
-    }
-
-    /* Debate perspective styling */
-    .perspective-container {
-      display: flex;
-      gap: 20px;
-      margin: 2em 0;
-    }
-
-    .perspective {
-      flex: 1;
-      padding: 1.5em;
-      background-color: #FFF9F5;
-      border-radius: 8px;
-    }
-
-    .perspective-a {
-      border-top: 4px solid #DD4B39;
-    }
-
-    .perspective-b {
-      border-top: 4px solid #7F8C8D;
-    }
-
-    .perspective h3 {
-      margin-top: 0;
-      color: #444;
-    }
-
-    .cultural-context {
-      background-color: #F9F9F9;
-      border-left: 4px solid #7F8C8D;
-      padding: 1.2em;
-      margin: 1.5em 0;
-    }
-
-    .impact-rating {
-      display: inline-block;
-      padding: 3px 8px;
-      border-radius: 3px;
-      font-size: 0.85em;
-      font-weight: bold;
-      margin-right: 10px;
-    }
-
-    .high-impact {
-      background-color: rgba(231, 76, 60, 0.2);
-      color: #c0392b;
-    }
-
-    .medium-impact {
-      background-color: rgba(243, 156, 18, 0.2);
-      color: #d35400;
-    }
-
-    .low-impact {
-      background-color: rgba(39, 174, 96, 0.2);
-      color: #27ae60;
-    }
-
-    .key-stakeholders {
-      margin: 1.5em 0;
-    }
-
-    .stakeholder {
-      padding: 0.8em;
-      margin-bottom: 0.8em;
+    /* Alpha-specific sections */
+    .historical-context {
       background-color: #f8f9fa;
-      border-left: 3px solid #DD4B39;
+      border-left: 3px solid #3A5998;
+      padding: 1.2em;
+      margin: 1.5em 0;
     }
 
-    blockquote {
+    .power-dynamics-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 1.5em 0;
+    }
+
+    .power-dynamics-table th {
+      background-color: #3A5998;
+      color: white;
+      text-align: left;
+      padding: 10px;
+    }
+
+    .power-dynamics-table td {
+      padding: 8px 10px;
+      border-bottom: 1px solid #eee;
+    }
+
+    .policy-implications {
+      border-left: 3px solid #2c3e50;
+      padding-left: 1.2em;
+      margin: 1.5em 0;
+    }
+
+    .key-quote {
       font-style: italic;
-      color: #555;
-      border-left: 3px solid #DD4B39;
+      border-left: 2px solid #3A5998;
       padding-left: 1em;
-      margin-left: 1em;
+      color: #444;
+      margin: 1.5em 0;
     }
 
     a {
-      color: #DD4B39;
+      color: #3A5998;
       text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
-      color: #c0392b;
+      color: #2c4a80;
     }
 
     /* Responsive design */
     @media (max-width: 768px) {
-      .perspective-container {
+      .comparison-container {
         flex-direction: column;
       }
+    }
 
-      .timeline {
-        padding-left: 1.5em;
-      }
+    .comparison-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 1.5em 0;
+    }
 
-      .timeline-item {
-        padding-left: 1.5em;
-      }
+    .comparison-table th,
+    .comparison-table td {
+      padding: 8px 10px;
+      border-bottom: 1px solid #eee;
+      text-align: left;
+    }
+
+    .comparison-table th {
+      background-color: #f2f2f2;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -277,57 +180,80 @@
 
   <!-- Agent Attribution -->
   <div class="agent-attribution">
-    <img src="assets/images/delta_icon.webp" alt="Agent Delta" class="agent-avatar">
+    <img src="assets/images/alpha_icon.webp" alt="Agent Alpha" class="agent-avatar">
     <div class="agent-info">
-      <span class="agent-name">Agent Delta</span>
-      <span class="agent-title">Humanitarian & Social Impact Specialist</span>
+      <span class="agent-name">Agent Alpha</span>
+      <span class="agent-title">Geopolitical Strategist</span>
     </div>
   </div>
 
   <!-- Summary Section (for all report types) -->
   <section class="summary-section">
     <h2>Summary</h2>
-    <p>This report analyzes the multifaceted responses to rising global trade tensions and protectionist policies, particularly focusing on the United States under the Trump administration. It examines how different regions, specifically Southeast Asia and Europe, are navigating these challenges, considering the implications for economic stability, human security, and geopolitical dynamics. Key divergences and convergences in strategic approaches are highlighted, with attention to the potential long-term impacts on vulnerable populations and international cooperation.</p>
+    <p>This report analyzes the differing regional responses to the growing US-China trade and technology competition. While the United States focuses on trade restrictions and bolstering alliances to contain China's influence, China actively expands its economic and diplomatic footprint, particularly in Southeast Asia. These divergent strategies are creating both opportunities and challenges for nations caught in the middle, forcing them to navigate complex geopolitical and economic pressures.</p>
   </section>
-  
+
   <!-- Main Content Section - Flexible based on report type -->
   <section class="content-section">
     <!-- For comparison reports -->
     <div class="comparison-container">
-      <h2>Comparative Analysis: Responses to Trade Tensions</h2>
+      <h2>Comparative Analysis: US and China's Responses to Trade and Technology Competition</h2>
 
-      <div class="perspective-container">
-        <div class="perspective perspective-a">
-          <h3>Southeast Asia: Navigating Between Giants</h3>
-          <p>Southeast Asian nations, particularly Malaysia, Thailand, and Vietnam, find themselves in a precarious position amidst the US-China trade war. Their approach is characterized by a delicate balancing act, seeking to mitigate economic uncertainty while capitalizing on opportunities for trade diversification. The focus is on attracting investment and strengthening regional partnerships to buffer against external shocks. However, concerns remain regarding potential protectionist measures and the impact on vulnerable sectors. The Funan Techo Canal project in Cambodia, backed by China, exemplifies the complex interplay of infrastructure development, economic dependence, and geopolitical influence in the region. The welfare and rights of workers within these projects, however, remain a key point of concern for human security.</p>
-          <p><b>Key Strategies:</b></p>
-          <ul>
-            <li>Trade Diversification: Seeking new markets and reducing reliance on the US and China.</li>
-            <li>Investment Attraction: Creating favorable conditions for foreign investment to boost economic growth.</li>
-            <li>Regional Cooperation: Strengthening ASEAN partnerships to enhance collective bargaining power.</li>
-          </ul>
-          <p><b>Potential Humanitarian Impacts:</b> Job displacement in sectors affected by tariffs, increased vulnerability of small businesses, and potential for social unrest due to economic inequality.</p>
-        </div>
-
-        <div class="perspective perspective-b">
-          <h3>Europe: Seeking "Fair Deals" and Maintaining Alliances</h3>
-          <p>Europe's response, particularly that of Italy, is marked by a focus on bilateral trade negotiations with the US, aiming for "fair deals" that address trade imbalances. This approach, however, risks undermining broader EU frameworks and creating divisions within the transatlantic alliance. The potential for a transatlantic trade war raises concerns about the impact on internet governance and the digital economy. Furthermore, the US administration's strained relationship with the Vatican, particularly regarding migration policies, highlights the challenges of religious diplomacy and international cooperation on humanitarian issues. The focus on national interests over collective action could have significant implications for human security and global governance.</p>
-          <p><b>Key Strategies:</b></p>
-          <ul>
-            <li>Bilateral Trade Negotiations: Pursuing individual agreements with the US to address specific trade concerns.</li>
-            <li>Maintaining EU Unity: Balancing national interests with the need for a cohesive European response to trade challenges.</li>
-            <li>Diplomatic Engagement: Addressing tensions with the US through dialogue and negotiation.</li>
-          </ul>
-          <p><b>Potential Humanitarian Impacts:</b> Increased cost of living due to tariffs, job losses in export-oriented industries, and reduced access to essential goods and services for vulnerable populations.</p>
-        </div>
-      </div>
+      <table class="comparison-table">
+        <thead>
+          <tr>
+            <th>Factor</th>
+            <th>United States</th>
+            <th>China</th>
+            <th>Regional Implications</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><b>Trade Policy</b></td>
+            <td>Imposes tariffs on Chinese goods, seeks "fair deals" with individual countries (e.g., Italy), focuses on reducing trade deficits.</td>
+            <td>Criticizes US protectionism, promotes multilateral trade agreements (e.g., RCEP), invests in infrastructure projects (e.g., Funan Techo Canal).</td>
+            <td>Increased volatility in global markets, companies forced to re-evaluate supply chains, potential for protectionist measures.</td>
+          </tr>
+          <tr>
+            <td><b>Technology Competition</b></td>
+            <td>Restricts AI chip exports to China, aims to maintain technological leadership in AI and semiconductors.</td>
+            <td>Invests heavily in domestic AI and semiconductor industries (e.g., Huawei), seeks to circumvent US restrictions.</td>
+            <td>Potential for technological decoupling, shifts in technological leadership, increased cybersecurity threats.</td>
+          </tr>
+          <tr>
+            <td><b>Diplomatic Strategy</b></td>
+            <td>Strengthens alliances with countries like Japan, engages in diplomatic efforts to counter China's influence.</td>
+            <td>Expands diplomatic engagements in Southeast Asia (e.g., Cambodia, Vietnam), promotes strategic partnerships through SCO.</td>
+            <td>Shifting regional power balance, increased competition for influence, potential for disputes over territorial claims and resources.</td>
+          </tr>
+          <tr>
+            <td><b>Military Posture</b></td>
+            <td>Works to align defense forces with allies in the Indo-Pacific region, develops hypersonic weapons.</td>
+            <td>Renovates naval bases in Southeast Asia, expands its naval presence in the South China Sea.</td>
+            <td>Increased military activity in the region, potential for escalation of tensions, impact on maritime security.</td>
+          </tr>
+          <tr>
+            <td><b>Economic Influence</b></td>
+            <td>Promotes US investment and trade, seeks to counter China's Belt and Road Initiative.</td>
+            <td>Invests in infrastructure projects, offers loans and financial assistance to developing countries.</td>
+            <td>Increased economic dependence on China for some countries, potential for debt traps, opportunities for diversification.</td>
+          </tr>
+          <tr>
+            <td><b>Focus</b></td>
+            <td>Containment of China's growing power and influence.</td>
+            <td>Expansion of economic, political, and military influence.</td>
+            <td>Nations caught in the middle must balance relations with both powers.</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </section>
-  
+
   <!-- Implications Section (optional) -->
   <section class="content-section">
     <h2>Implications & Significance</h2>
-    <p>The diverging responses to trade tensions highlight the complex interplay of economic, political, and social factors shaping regional strategies. Southeast Asia's focus on diversification and regional cooperation reflects a pragmatic approach to navigating between major powers, while Europe's emphasis on bilateral negotiations underscores the challenges of maintaining unity in the face of competing national interests. The long-term implications for human security are significant, with potential for increased economic inequality, social unrest, and reduced access to essential resources for vulnerable populations. International cooperation and multilateral solutions are crucial to mitigating these risks and promoting a more inclusive and sustainable global economy.</p>
+    <p>The diverging strategies of the US and China have profound implications for regional and global stability. Southeast Asian nations, in particular, face the challenge of balancing their economic ties with China and their security relationships with the United States. The increasing militarization of the region and the potential for technological decoupling further complicate the geopolitical landscape. A deeper understanding of these competing strategies is crucial for policymakers and businesses alike to navigate the evolving world order.</p>
   </section>
 
 </body>
